rust_language/examples/c02_variable_test.rs
#[test]
pub fn test() {
    println!("hello test")
}
#[test]
pub fn var_change() {
    let x = 5;
    println!("The value of x is: {}", x);
    // error : x ä¸å¯å˜
    // x = 6;

    let mut y = 6;
    println!("The value of y is: {}", y);
    y = 7;
    assert_eq!(y, 7);
    println!("The value of y is: {}", y);

    let x = 5;

    let x = x + 1;

    let x = x * 2;

    println!("The value of x is: {}", x);

    let spaces = "   ";
    println!("The value of spaces is: {}", spaces);
    let spaces = spaces.len();
    println!("The value of spaces is: {}", spaces);

    const C_F: f64 = 4.5;
    println!("The value of C_F is: {}", C_F);
    // error : ä¸å¯ä»¥è¦†ç›–const ç±»å‹
    // let mut C_F = "   ";
    // println!("The value of C_F is: {}", C_F);
    // let C_F = 44.5;
}

#[test]
#[allow(unused_variables)]
pub fn value_type() {
    let var: i32;
    // error : var  possibly-uninitialized
    // println!("The value of var is: {}", var);
    var = 42;
    println!("The value of var is: {}", var);
    // error : i32 æ˜¯ä¸å¯å˜ç±»å‹çš„, åªå…è®¸åˆå§‹åŒ–å¤åˆ¶ä¸€æ¬¡, ä¸å…è®¸å†ä¿®æ”¹
    // æ³¨æ„constç±»å‹ç›´æ¥è¦å£°æ˜å¥½å€¼, æ°¸è¿œä¸å…è®¸åœ¨æ”¹å˜
    // å®ƒä»¬æ˜¯ä¸åŒçš„
    // var = 44;
    // println!("The value of var is: {}", var);

    let var: f64 = 4.4;
    println!("The value of var is: {}", var);

    // charæ˜¯æ ‡å‡†çš„u8å­—ç¬¦, å ç”¨4ä¸ªå­—èŠ‚, å’Œc++å®Œå…¨ä¸åŒ
    // ä½¿ç”¨u8 æ¥å®ç°ç±»ä¼¼byteçš„åŠŸèƒ½
    let var: char = 'ğŸ˜»';
    println!("The value of var is: {}", var);

    let var = (4.5, 44, 'å¥½', "å“ˆå“ˆå“ˆ");
    // error tuple ä¸ä¼šè‡ªå¸¦ to_string
    // ä½†æ˜¯å¸¦Debug, åªè¦æ‰€æœ‰å†…éƒ¨å˜é‡éƒ½æ˜¯Debugçš„
    println!("The value of var is: {:?}", var);
    // ç±»ä¼¼c++17çš„ç»“æ„åŒ–ç»‘å®š
    // rustä¸­å« è§£æ„ï¼ˆdestructuringï¼‰
    let (a, b, c, d) = var;
    println!("The value of d is: {}", d);

    let arr = [2, 3, 3, 4, 9];
    // error : émutæ•°ç»„è¿å…ƒç´ ä¹Ÿä¸å…è®¸ä¿®æ”¹
    // arr[2] = 8;
    println!("The value of arr is: {}", arr[2]);

    let mut arr: [i32; 10];

    // error : æ¯ä¸ªå…ƒç´ å¿…é¡»åˆå§‹åŒ–åæ‰èƒ½ä½¿ç”¨
    // çœ‹èµ·æ¥rustæ˜¯æŒ‰ç…§æ¯ä¸ªå¯¹è±¡è®°å½•è®¿é—®, åˆå§‹åŒ–çš„
    // println!("The value of arr is: {}", arr[2]);

    // error: æ•°ç»„æ²¡æœ‰åˆå§‹åŒ–, åé¢ä¹Ÿä¸å†å…è®¸ä½¿ç”¨
    // arr[2] = 42;
    // åˆå§‹åŒ–åå°±å¯ä»¥ä½¿ç”¨äº†
    arr = [-200; 10];
    arr[2] = 42;
    println!("The value of arr is: {}", arr[2]);

    let mut arr = [-100; 8];

    println!("The value of arr is: {}", arr[2]);
    arr[2] = 42;
    println!("The value of arr is: {}", arr[2]);
}

fn main() {}
